fix css alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -91,11 +91,9 @@ box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.08);
 font-family: 'TT Commons',sans-serif;
 width: 100%;
 margin-bottom: 16px!important;
+height: 50px;
 }
 
-.MuiButtonGroup-contained:last-child{
-  margin-bottom: 0px;
-}
 
 
 .Mui-selected{
@@ -123,10 +121,21 @@ margin-bottom: 16px!important;
   padding-right: 24px;
 }
 
-.MuiButton-contained	{
+.css-sghohy-MuiButtonBase-root-MuiButton-root	{
   width: 100%;
   background-color: #3398FF!important;
+  border-radius: 8px!important;
+border: 1px solid #DEE5EB!important;
+box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.08)!important;
+height: 60px;
+padding: 8px;
 }
+
+.css-sghohy-MuiButtonBase-root-MuiButton-root span{
+  color: white;
+  text-transform: none!important;
+}
+
 
 .goal-continue{
   padding-left: 24px;
